# CGFramework

./: CMakeLists.txt  README.md
src/framework/: image.cpp  image.h
